--- a/tansci-admin/tansci-admin-biz/src/main/resources/application.yml
+++ b/tansci-admin/tansci-admin-biz/src/main/resources/application.yml
@@ -13,25 +13,25 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 10.167.1.73:8848
+        server-addr: 127.0.0.1:8848
         namespace: c969345a-1251-4387-a64d-1da75fff8f0c
     # Sentinel熔断器
     sentinel:
       transport:
         port: 8719
-        dashboard: 10.167.1.73:8858 # sentinel控制台
+        dashboard: 127.0.0.1:8858 # sentinel控制台
       eager: true  # 服务启动直接建立心跳连接
       datasource: # Sentinel使用Nacos存储规则
         ds1:
           nacos:
-            server-addr: 10.167.1.73:8848
+            server-addr: 127.0.0.1:8848
             dataId: ${spring.application.name}-flow-rules
             namespace: c969345a-1251-4387-a64d-1da75fff8f0c
             data-type: json
             rule-type: flow
   #Druid 连接池通用配置
   datasource:
-    url: jdbc:mysql://10.167.1.73:3306/call_cloud?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&autoReconnect=true&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/tansci_cloud?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&autoReconnect=true&useSSL=false
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
@@ -88,7 +88,7 @@ dubbo:
     port: 20882
   registry:
     # 挂载到 Spring Cloud 注册中心
-    address: spring-cloud://10.167.1.73
+    address: spring-cloud://127.0.0.1
   scan:
     base-packages: com.tansci.provider.impl
   consumer:
