--- a/tansci-view/tsconfig.json
+++ b/tansci-view/tsconfig.json
@@ -4,6 +4,7 @@
       "node_modules/@types", // 默认值
       "src/types"
     ],
+    "baseUrl": "./",
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
@@ -15,13 +16,11 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "skipLibCheck": true,
-    "baseUrl": "./",
     "paths":{
       "@": ["src"],
       "@/*": ["src/*"],
-    }
+    },
+    "skipLibCheck": true,
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
