--- a/tansci-view/package.json
+++ b/tansci-view/package.json
@@ -17,6 +17,8 @@
     "element-plus": "^2.1.11",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
+    "pinia-plugin-persist": "^1.0.0",
+    "qs": "^6.10.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
