--- a/tansci-modules/tansci-admin-service/pom.xml
+++ b/tansci-modules/tansci-admin-service/pom.xml
@@ -4,15 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.tansci</groupId>
-        <artifactId>tansci-admin</artifactId>
+        <artifactId>tansci-modules</artifactId>
         <version>1.0.0</version>
     </parent>
 
     <groupId>com.tansci</groupId>
-    <artifactId>tansci-admin-biz</artifactId>
+    <artifactId>tansci-admin-service</artifactId>
     <version>1.0.0</version>
-
-    <name>tansci-admin-biz</name>
+    <name>tansci-admin-service</name>
 
     <properties>
         <java.version>1.8</java.version>
