--- a/tansci-modules/tansci-api/pom.xml
+++ b/tansci-modules/tansci-api/pom.xml
@@ -4,20 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.tansci</groupId>
-        <artifactId>tansci-cloud</artifactId>
+        <artifactId>tansci-modules</artifactId>
         <version>1.0.0</version>
     </parent>
 
     <groupId>com.tansci</groupId>
-    <artifactId>tansci-admin</artifactId>
+    <artifactId>tansci-api</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
-
-    <name>tansci-admin</name>
+    <name>tansci-api</name>
 
     <modules>
         <module>tansci-admin-api</module>
-        <module>tansci-admin-biz</module>
     </modules>
 
 </project>
