--- a/tansci-modules/tansci-api/tansci-admin-api/pom.xml
+++ b/tansci-modules/tansci-api/tansci-admin-api/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.tansci</groupId>
-        <artifactId>tansci-admin</artifactId>
+        <artifactId>tansci-api</artifactId>
         <version>1.0.0</version>
     </parent>
 
