--- a/tansci-common/pom.xml
+++ b/tansci-common/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>common-core</module>
         <module>common-web</module>
+        <module>common-database</module>
     </modules>
 
 </project>
