--- a/tansci-modules/tansci-admin-service/pom.xml
+++ b/tansci-modules/tansci-admin-service/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>common-web</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.tansci</groupId>
+            <artifactId>common-database</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
