--- a/tansci-gateway/src/main/resources/application.yml
+++ b/tansci-gateway/src/main/resources/application.yml
@@ -33,10 +33,17 @@ spring:
           filters:
             - SwaggerHeaderFilter
             - StripPrefix=1
-        - id: tansci-admin # 商户
+        - id: tansci-admin # 基础
           uri: lb://tansci-admin
           predicates:
             - Path=/admin/**
+          filters:
+            - SwaggerHeaderFilter
+            - StripPrefix=1
+        - id: tansci-scheduled # 调度
+          uri: lb://tansci-scheduled
+          predicates:
+            - Path=/scheduled/**
           filters:
             - SwaggerHeaderFilter
             - StripPrefix=1
@@ -62,4 +69,5 @@ exclusion:
     - /auth/login
     - /auth/signout
     - /admin/v2/api-docs
+    - /scheduled/v2/api-docs
 
