--- a/tansci-view/package.json
+++ b/tansci-view/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
