--- a/tansci-gateway/src/main/resources/application.yml
+++ b/tansci-gateway/src/main/resources/application.yml
@@ -5,15 +5,15 @@ spring:
     name: tansci-gateway
   redis:
     database: 2
-    host: 10.167.1.73
+    host: 127.0.0.1
     port: 6379
     password:
   cloud:
     # Nacos注册中心
     nacos:
       discovery:
-        server-addr: 10.167.1.73:8848
-        namespace: d01a5728-d581-438a-a0e8-e180a08f1e6d
+        server-addr: 127.0.0.1:8848
+#        namespace: d01a5728-d581-438a-a0e8-e180a08f1e6d
     # 网关路由配置
     gateway:
       # 设置与服务注册发现组件结合，这样可以采用服务名的路由策略
@@ -52,14 +52,14 @@ spring:
     sentinel:
       transport:
         port: 8719
-        dashboard: 10.167.1.73:8858 # sentinel控制台
+        dashboard: 127.0.0.1:8858 # sentinel控制台
       eager: true  # 服务启动直接建立心跳连接
       datasource: # Sentinel使用Nacos存储规则
         ds1:
           nacos:
-            server-addr: 10.167.1.73:8848
+            server-addr: 127.0.0.1:8848
             dataId: ${spring.application.name}-flow-rules
-            namespace: d01a5728-d581-438a-a0e8-e180a08f1e6d
+#            namespace: d01a5728-d581-438a-a0e8-e180a08f1e6d
             data-type: json
             rule-type: flow
 
