封装redisson分布式锁

--- a/tansci-common/pom.xml
+++ b/tansci-common/pom.xml
@@ -18,6 +18,7 @@
         <module>common-core</module>
         <module>common-web</module>
         <module>common-database</module>
+        <module>common-redisson</module>
     </modules>
 
 </project>
