--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <lombok.version>1.18.12</lombok.version>
         <jackson.version>2.13.1</jackson.version>
         <knife4j-spring-boot.version>3.0.3</knife4j-spring-boot.version>
+        <redisson.version>3.17.5</redisson.version>
     </properties>
 
     <dependencyManagement>
@@ -141,6 +142,12 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${knife4j-spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
