--- a/tansci-common/common-sentinel/pom.xml
+++ b/tansci-common/common-sentinel/pom.xml
@@ -8,15 +8,12 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.tansci.common.web</groupId>
-    <artifactId>common-web</artifactId>
+    <groupId>com.tansci.common.sentinel</groupId>
+    <artifactId>common-sentinel</artifactId>
     <version>1.0.0</version>
 
-    <name>common-web</name>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+    <name>common-sentinel</name>
+    <description>sentinel服务降级熔断、限流组件</description>
 
     <dependencies>
         <dependency>
@@ -25,24 +22,23 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.tansci.admin.api</groupId>
-            <artifactId>tansci-admin-api</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.tansci.common.sentinel</groupId>
-            <artifactId>common-sentinel</artifactId>
+            <groupId>com.tansci.common.core</groupId>
+            <artifactId>common-core</artifactId>
             <version>1.0.0</version>
         </dependency>
     </dependencies>
